kiali/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
    - "kiali.lth.so"
    - "kiali.limtaehyun.dev"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - headers:
            :authority:
              exact: kiali.limtaehyun.dev
      redirect:
        authority: kiali.lth.so
    - route:
        - destination:
            host: kiali.kiali.svc.cluster.local
            port:
              number: 20001
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
